change the subtext to silly instead of whimsical

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>Plain Vanilla Narratives — With many digressions and occasional wacky and whimsical sprinkles. + many grammar mistakes</title>
+<title>Plain Vanilla Narratives — With many digressions and occasional silly and wacky sprinkles. + many grammar mistakes</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -9574,8 +9574,8 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20200628051755123" modified="20200628054909924" title="$:/SiteSubtitle">
-<pre>With many digressions and occasional wacky and whimsical sprinkles. + many grammar mistakes</pre>
+<div created="20200628051755123" modified="20200628105150603" title="$:/SiteSubtitle">
+<pre>With many digressions and occasional silly and wacky sprinkles. + many grammar mistakes</pre>
 </div>
 <div created="20200628045912140" modified="20200628045915224" title="$:/SiteTitle">
 <pre>Plain Vanilla Narratives</pre>
@@ -9592,7 +9592,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200628063210739" list="[[Messy Mind: Order Chaos]]" modified="20200628063210739" title="$:/StoryList">
+<div created="20200628105141516" list="$:/ControlPanel [[Messy Mind: Order Chaos]]" modified="20200628105141516" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
